--- a/apps/frontend/src/app/globals.css
+++ b/apps/frontend/src/app/globals.css
@@ -25,7 +25,7 @@
   --color-secondary-hover: var(--color-electric-purple);
   --color-secondary-accent: var(--color-light-purple);
   
-  /* Neutral colors como escala */
+  /* Neutral colors como escala sss*/
   --color-neutral-1: var(--color-black);
   --color-neutral-2: var(--color-gray-2);
   --color-neutral-3: var(--color-gray);
