--- a/apps/frontend/src/app/globals.css
+++ b/apps/frontend/src/app/globals.css
@@ -32,7 +32,7 @@
   --color-neutral-4: var(--color-white-2);
   --color-neutral-5: var(--color-white);
 
-  /* Gradientes personalizados */
+  /* Gradientes personalizados sss */
   --background-gradient-card: linear-gradient(0deg, var(--color-neutral-3) 0%, var(--color-neutral-4) 100%);
   --background-gradient-navbar: linear-gradient(180deg, var(--color-neutral-5) 0%, var(--color-neutral-4) 100%);
   --background-gradient-hero: linear-gradient(0deg, var(--color-neutral-5) 0%, var(--color-neutral-4) 100%);
