--- a/apps/frontend/src/app/globals.css
+++ b/apps/frontend/src/app/globals.css
@@ -77,6 +77,7 @@ html, body {
   --background-gradient-navbar: linear-gradient(180deg, var(--color-neutral-4) 0%, var(--color-neutral-5) 100%);
   --background-gradient-hero: linear-gradient(0deg, var(--color-neutral-4) 0%, var(--color-neutral-5) 100%);
   --background-gradient-section: linear-gradient(180deg, var(--color-neutral-4) 0%, var(--color-neutral-5) 100%);
+  --background-gradient-section-2: linear-gradient(180deg, var(--color-neutral-5) 0%, var(--color-neutral-4) 100%);
 
   /* Sombras - Dark */
   --text-shadow-default: 0 2px 4px rgba(255, 255, 255, 0.1);
@@ -104,6 +105,14 @@ html, body {
 
   .section-bg {
     background: var(--background-gradient-section);
+  }
+
+  .section-bg-2 {
+    background: var(--background-gradient-section-2);
+  }
+
+  .primary-bg {
+    background-color: var(--color-primary);
   }
 
   .text-shadow {
@@ -138,7 +147,17 @@ html, body {
     color: var(--color-neutral-1);
   }
 
+  .text-neutral-2 {
+    color: var(--color-neutral-4);
+  }
+
   /* Border */
-  .border-neutral {
+   .border-neutral-1 {
+    border-color: var(--color-neutral-1);
+  }
+
+  .border-neutral-3 {
     border-color: var(--color-neutral-3);
   }
+
+ 
