--- a/apps/frontend/src/app/globals.css
+++ b/apps/frontend/src/app/globals.css
@@ -45,7 +45,9 @@ html, body {
   --background-gradient-card: linear-gradient(0deg, var(--color-neutral-3) 0%, var(--color-neutral-4) 100%);
   --background-gradient-navbar: linear-gradient(180deg, var(--color-neutral-5) 0%, var(--color-neutral-4) 100%);
   --background-gradient-hero: linear-gradient(0deg, var(--color-neutral-5) 0%, var(--color-neutral-4) 100%);
+
   --background-gradient-section: linear-gradient(180deg, var(--color-neutral-5) 0%, var(--color-neutral-4) 100%);
+  --background-gradient-section-2: linear-gradient(0deg, var(--color-neutral-5) 0%, var(--color-neutral-4) 100%);
 
   /* Sombras - Light */
   --text-shadow-default: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -57,7 +59,7 @@ html, body {
 
 .dark {
   /* Colores - Dark */
-  --color-primary: #1e40af; /* Azul más claro para dark */
+  --color-primary: #5678e9; /* Azul más claro para dark */
   --color-primary-hover: #3b82f6;
   --color-primary-accent: #93c5fd;
   --color-secondary: #5b21b6;
@@ -76,8 +78,9 @@ html, body {
   --background-gradient-card: linear-gradient(0deg, var(--color-neutral-3) 0%, var(--color-neutral-4) 100%);
   --background-gradient-navbar: linear-gradient(180deg, var(--color-neutral-4) 0%, var(--color-neutral-5) 100%);
   --background-gradient-hero: linear-gradient(0deg, var(--color-neutral-4) 0%, var(--color-neutral-5) 100%);
+
   --background-gradient-section: linear-gradient(180deg, var(--color-neutral-4) 0%, var(--color-neutral-5) 100%);
-  --background-gradient-section-2: linear-gradient(180deg, var(--color-neutral-5) 0%, var(--color-neutral-4) 100%);
+  --background-gradient-section-2: linear-gradient(0deg, var(--color-neutral-4) 0%, var(--color-neutral-5) 100%);
 
   /* Sombras - Dark */
   --text-shadow-default: 0 2px 4px rgba(255, 255, 255, 0.1);
@@ -149,6 +152,13 @@ html, body {
 
   .text-neutral-2 {
     color: var(--color-neutral-4);
+  }
+
+  .text-links {
+    color: var(--color-primary );
+    &:hover {
+      color: var(--color-primary-hover);
+    }
   }
 
   /* Border */
